--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "name": "backend",
   "version": "1.0.0",
